# parellel-image-processing

./: CMakeLists.txt  LICENSE  README.md  main.cpp
